# star-rag-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app-specific-rules.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
app/: main.py
app/api/v1/endpoints/: documents.py  query.py
app/config/: prompts.py  settings.py
app/core/: database.py  logging.py  security.py
app/models/: document.py  schemas.py
app/services/: llm_service.py  parser_service.py  storage_service.py
app/static/: app.js  index.html  style.css
app/workers/: beat_tasks.py  celery_app.py  tasks.py
scripts/: evaluate_rag.py
tests/: conftest.py  evaluate_rag.py
tests/integration/: test_documents_api.py  test_documents_duplicates.py  test_main.py  test_main_endpoints.py  test_query_api.py
tests/unit/api/v1/endpoints/: test_documents.py
tests/unit/config/: test_prompts.py
tests/unit/core/: test_database.py  test_logging.py  test_security.py  test_settings.py
tests/unit/models/: test_document_models.py  test_schemas.py
tests/unit/services/: test_llm_service.py  test_parser_service.py  test_storage_service.py
tests/unit/workers/: conftest.py  test_celery_app.py  test_tasks.py
