[project]
name = "star-rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "en-core-web-lg",
    "fastapi>=0.135.3",
    "firebase-admin>=7.4.0",
    "google-genai>=1.74.0",
    "minio>=7.2.20",
    "pgvector>=0.4.2",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "spacy>=3.8.13",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
    "ignore:.*builtin type SwigPyPacked has no __module__ attribute.*:DeprecationWarning",
    "ignore:.*builtin type SwigPyObject has no __module__ attribute.*:DeprecationWarning",
    "ignore:.*builtin type swigvarlink has no __module__ attribute.*:DeprecationWarning",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
